--- a/style.css
+++ b/style.css
@@ -1,75 +1,97 @@
-body {
-     background-color: #b8b8b8;
-     font-size: 13px;
-     line-height: 18px;
-     color: #333;
+body{
+    background-color: #638a79;
+    background-image: url("img/body-bg.png");
+    background-repeat: repeat-x;
+    background-position: fixed;
+    font-size: 13px;
+    line-height: 18px;
+    color: #333;
+    font-family: Arial;
 }
 
-#content {
-	width: 800px;
-	height: auto;
-	padding-bottom: 20px;
+.content {
+	width: 840px;
+	background-color: #fff;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.content .content-top {
+	height: 12px;
+	background-image: url("img/content-bg.png");
+	background-position: 0, 0;
+	
+}
+.content .content-bottom {
+	height: 12px;
+	background-image: url("img/content-bg.png");
+	background-position: -840px 0px; 
+}
+.content .content-middle {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 30px;
+	margin-right: 30px;
+}
+	
+h1 {
+   font-size: 26px;
+   line-height: 36px;
+   color: #2b8c57;
+   font-weight: normal;
+   margin-bottom: 10px;
+ }
+h2 { 
+   font-size: 18px;
+   line-height: 28px;
+   color: #2b8c57;
+   font-weight: normal;
+   font-style: italic;
+   margin-top: 30px;
+   margin-bottom: 15px; 
+}
+	
+
+div.block-1 {
+	color: white;
+	font-style: italic;
+	font-size: 12px;
+	padding-bottom:  20px; 
 	padding-top: 20px;
 	padding-left: 30px;
-	padding-right: 30px;
-	background-color: #fff;
-	margin: 0 auto;
+	padding-right: 30px; 
+	background-color: #2b8c57;
+	background-image: url("img/block-1-bg.png");
+	background-repeat: repeat-x;
+    background-position: fixed;
 }
-h1 {
-	font-size: 26px;
-	line-height: 30px;
-	color: #333;
-	font-weight: normal;
+div.block-2 {
+	color: white;
+	font-style: italic;
+	font-size: 12px;
+	padding-bottom:  20px; 
 	padding-top: 20px;
-	padding-bottom: 10px;
+	padding-left: 30px;
+	padding-right: 30px; 
+	background-color: #356149;
+	background-image: url("img/picture-1.png");
+    background-position: right;
+    background-repeat: no-repeat;
 }
-h2 {
-	font-size: 36px;
-	line-height: 46px;
-	color: #333;
-	font-weight: normal;
-	font-style: italic;
-	padding-top: 40px;
-	padding-bottom: 20px;
+
+a.button {
+	display: block;
+	width: 121px;
+	height: 38px;
+	text-decoration:none;
+	background-image: url("img/button-1.png");
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+
 }
-.fixed {
-	position: fixed;
-	top: 20px;
-	right: 0px;
-	width: 200px;
-	padding: 20px 20px;
-	font-style: italic;
-	background-color: #666;
-	color: #fff;
-} 
-#puzzle {
-	position: relative;
-	border: 5px solid #333;
-	margin: 0 auto;
-	height: 465px;
-	width: 620px;
-    background-image: url("img/v7/v7-watermark.jpg");
+a.button:hover {
+	background-position: 0px -38px;
 }
-#puzzle > img {
-	position: absolute;
+a.button:active {
+	background-position: 0px -76px;
 }
-   #puzzle #img1 {top:0px; left: 0px;}
-   #puzzle #img2 {top: 0px; left: 121px;}
-   #puzzle #img3 {top: 0px; left: 207px;}
-   #puzzle #img4 {top: 0px; left: 379px;}
-   #puzzle #img5 {top: 0px; left: 458px;}
-   #puzzle #img6 {top: 76px; left: 0px;}
-   #puzzle #img7 {top: 110px; left: 88px;}
-   #puzzle #img8 {top: 82px; left: 240px;}
-   #puzzle #img9 {top: 122px; left: 338px;}
-   #puzzle #img10 {top: 83px; left: 492px;}
-   #puzzle #img11 {top: 234px; left: 0px;}
-   #puzzle #img12 {top: 195px; left: 122px;}
-   #puzzle #img13 {top: 229px; left: 207px;}
-   #puzzle #img14 {top: 192px; left: 370px;}
-   #puzzle #img15 {top: 199px; left: 520px;}
-   #puzzle #img16 {top: 308px; left: 0px;}
-   #puzzle #img17 {top: 343px; left: 88px;}
-   #puzzle #img18 {top: 318px; left: 245px;}
-   #puzzle #img19 {top: 390px; left: 365px;}
-   #puzzle #img20 {top: 362px; left: 574px;}
